# crossref-citation-extraction

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
benches/: extraction_bench.rs
docs/plans/: 2026-01-08-doi-extraction-expansion-design.md  2026-01-08-doi-extraction-implementation.md  2026-01-08-provenance-tracking-design.md  2026-01-08-provenance-tracking-implementation.md
src/: cli.rs  lib.rs  main.rs
src/commands/: convert.rs  extract.rs  invert.rs  mod.rs  pipeline.rs  validate.rs
src/common/: logging.rs  mod.rs  output.rs  progress.rs  types.rs  utils.rs
src/extract/: arxiv.rs  doi.rs  mod.rs  patterns.rs  provenance.rs
src/index/: builder.rs  mod.rs  persistence.rs
src/streaming/: checkpoint.rs  mod.rs  partition_invert.rs  partition_writer.rs
src/validation/: http.rs  lookup.rs  mod.rs  prefix_filter.rs  runner.rs
tests/: integration_test.rs
